{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 209,
  "lineage": "6025ddfb-d8c9-43ae-43c6-d953e6946fbc",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397775295:security-group/sg-00127b1e1d29d41c0",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-00127b1e1d29d41c0",
            "ingress": [],
            "name": "k8s-n8n-cluster-2026011404065222470000000d",
            "name_prefix": "k8s-n8n-cluster-",
            "owner_id": "767397775295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-n8n-cluster",
              "Project": "k8s-n8n"
            },
            "tags_all": {
              "Name": "k8s-n8n-cluster",
              "Project": "k8s-n8n"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f95190acccd68cf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397775295:security-group/sg-0b97813b07d46c290",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0b97813b07d46c290",
            "ingress": [],
            "name": "k8s-n8n-node-2026011404065209700000000c",
            "name_prefix": "k8s-n8n-node-",
            "owner_id": "767397775295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-n8n-node",
              "Project": "k8s-n8n",
              "kubernetes.io/cluster/k8s-n8n": "owned"
            },
            "tags_all": {
              "Name": "k8s-n8n-node",
              "Project": "k8s-n8n",
              "kubernetes.io/cluster/k8s-n8n": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f95190acccd68cf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-841826878",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00127b1e1d29d41c0",
            "security_group_rule_id": "sgr-0d38d36f0ef859d35",
            "self": false,
            "source_security_group_id": "sg-0b97813b07d46c290",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3574357288",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b97813b07d46c290",
            "security_group_rule_id": "sgr-01b80a6549c894a12",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2784487266",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b97813b07d46c290",
            "security_group_rule_id": "sgr-0ff0cf451181d9dd4",
            "self": false,
            "source_security_group_id": "sg-00127b1e1d29d41c0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3058864191",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b97813b07d46c290",
            "security_group_rule_id": "sgr-087152c15f183c7e3",
            "self": false,
            "source_security_group_id": "sg-00127b1e1d29d41c0",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2131818409",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b97813b07d46c290",
            "security_group_rule_id": "sgr-05678f7396fdd82ae",
            "self": false,
            "source_security_group_id": "sg-00127b1e1d29d41c0",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1816972168",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b97813b07d46c290",
            "security_group_rule_id": "sgr-006c47938e2baf4d0",
            "self": false,
            "source_security_group_id": "sg-00127b1e1d29d41c0",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-149813315",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b97813b07d46c290",
            "security_group_rule_id": "sgr-008490d7ffc6a60d5",
            "self": false,
            "source_security_group_id": "sg-00127b1e1d29d41c0",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3426784146",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b97813b07d46c290",
            "security_group_rule_id": "sgr-0a9483288229c938e",
            "self": false,
            "source_security_group_id": "sg-00127b1e1d29d41c0",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1434545221",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b97813b07d46c290",
            "security_group_rule_id": "sgr-0c5360d237cebf72d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2250758615",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b97813b07d46c290",
            "security_group_rule_id": "sgr-0521a6c81edec99f0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-578320952",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0b97813b07d46c290",
            "security_group_rule_id": "sgr-05ec96b569d08f10a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397775295:network-acl/acl-0150bbf420928621c",
            "default_network_acl_id": "acl-0150bbf420928621c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0150bbf420928621c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767397775295",
            "subnet_ids": [
              "subnet-041035bc3a1aa7dae",
              "subnet-042b82b128156e794",
              "subnet-072513de2e0b8a21b",
              "subnet-0a0cf993fdf2c9aba",
              "subnet-0b5d973a8c3ada415"
            ],
            "tags": {
              "Name": "k8s-n8n-vpc-default",
              "Project": "k8s-n8n"
            },
            "tags_all": {
              "Name": "k8s-n8n-vpc-default",
              "Project": "k8s-n8n"
            },
            "vpc_id": "vpc-0f95190acccd68cf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397775295:route-table/rtb-0ce0a2132910102f9",
            "default_route_table_id": "rtb-0ce0a2132910102f9",
            "id": "rtb-0ce0a2132910102f9",
            "owner_id": "767397775295",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "k8s-n8n-vpc-default",
              "Project": "k8s-n8n"
            },
            "tags_all": {
              "Name": "k8s-n8n-vpc-default",
              "Project": "k8s-n8n"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f95190acccd68cf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397775295:security-group/sg-08ddfe6d36a532bf7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08ddfe6d36a532bf7",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767397775295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-n8n-vpc-default",
              "Project": "k8s-n8n"
            },
            "tags_all": {
              "Name": "k8s-n8n-vpc-default",
              "Project": "k8s-n8n"
            },
            "vpc_id": "vpc-0f95190acccd68cf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca2debd193af52e8",
            "arn": "arn:aws:ec2:us-east-1:767397775295:elastic-ip/eipalloc-0ca2debd193af52e8",
            "domain": "vpc",
            "id": "eipalloc-0ca2debd193af52e8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-196-41-24.compute-1.amazonaws.com",
            "public_ip": "34.196.41.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s-n8n-vpc-us-east-1a",
              "Project": "k8s-n8n"
            },
            "tags_all": {
              "Name": "k8s-n8n-vpc-us-east-1a",
              "Project": "k8s-n8n"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397775295:internet-gateway/igw-0b474d8aacfd860b3",
            "id": "igw-0b474d8aacfd860b3",
            "owner_id": "767397775295",
            "tags": {
              "Name": "k8s-n8n-vpc",
              "Project": "k8s-n8n"
            },
            "tags_all": {
              "Name": "k8s-n8n-vpc",
              "Project": "k8s-n8n"
            },
            "vpc_id": "vpc-0f95190acccd68cf5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca2debd193af52e8",
            "association_id": "eipassoc-01496673288e7e797",
            "connectivity_type": "public",
            "id": "nat-02718d732c2f27971",
            "network_interface_id": "eni-0a40e5bcf6a28edeb",
            "private_ip": "10.6.101.209",
            "public_ip": "34.196.41.24",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cb5a047db71647c3",
            "tags": {
              "Name": "k8s-n8n-vpc-us-east-1a",
              "Project": "k8s-n8n"
            },
            "tags_all": {
              "Name": "k8s-n8n-vpc-us-east-1a",
              "Project": "k8s-n8n"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-098991de3bc9292a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02718d732c2f27971",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-098991de3bc9292a1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b474d8aacfd860b3",
            "id": "r-rtb-0344f2494d032157f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0344f2494d032157f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397775295:route-table/rtb-098991de3bc9292a1",
            "id": "rtb-098991de3bc9292a1",
            "owner_id": "767397775295",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-n8n-vpc-private",
              "Project": "k8s-n8n"
            },
            "tags_all": {
              "Name": "k8s-n8n-vpc-private",
              "Project": "k8s-n8n"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f95190acccd68cf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397775295:route-table/rtb-0344f2494d032157f",
            "id": "rtb-0344f2494d032157f",
            "owner_id": "767397775295",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-n8n-vpc-public",
              "Project": "k8s-n8n"
            },
            "tags_all": {
              "Name": "k8s-n8n-vpc-public",
              "Project": "k8s-n8n"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f95190acccd68cf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aed57283ddb2e042",
            "route_table_id": "rtb-098991de3bc9292a1",
            "subnet_id": "subnet-041035bc3a1aa7dae"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f63fc2c40ebf428d",
            "route_table_id": "rtb-098991de3bc9292a1",
            "subnet_id": "subnet-072513de2e0b8a21b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e606cb61fc8f3de9",
            "route_table_id": "rtb-098991de3bc9292a1",
            "subnet_id": "subnet-042b82b128156e794"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04db01f3ee8f094c4",
            "route_table_id": "rtb-0344f2494d032157f",
            "subnet_id": "subnet-0cb5a047db71647c3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011d65c4b45103198",
            "route_table_id": "rtb-0344f2494d032157f",
            "subnet_id": "subnet-0a0cf993fdf2c9aba"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfb9ea91ea4c03c2",
            "route_table_id": "rtb-0344f2494d032157f",
            "subnet_id": "subnet-0b5d973a8c3ada415"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397775295:subnet/subnet-041035bc3a1aa7dae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.6.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041035bc3a1aa7dae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397775295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-n8n-vpc-private-us-east-1a",
              "Project": "k8s-n8n",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "k8s-n8n-vpc-private-us-east-1a",
              "Project": "k8s-n8n",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f95190acccd68cf5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397775295:subnet/subnet-072513de2e0b8a21b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.6.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072513de2e0b8a21b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397775295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-n8n-vpc-private-us-east-1b",
              "Project": "k8s-n8n",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "k8s-n8n-vpc-private-us-east-1b",
              "Project": "k8s-n8n",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f95190acccd68cf5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397775295:subnet/subnet-042b82b128156e794",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.6.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042b82b128156e794",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397775295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-n8n-vpc-private-us-east-1c",
              "Project": "k8s-n8n",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "k8s-n8n-vpc-private-us-east-1c",
              "Project": "k8s-n8n",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f95190acccd68cf5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397775295:subnet/subnet-0cb5a047db71647c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.6.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb5a047db71647c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397775295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-n8n-vpc-public-us-east-1a",
              "Project": "k8s-n8n",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "k8s-n8n-vpc-public-us-east-1a",
              "Project": "k8s-n8n",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f95190acccd68cf5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397775295:subnet/subnet-0a0cf993fdf2c9aba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.6.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0cf993fdf2c9aba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397775295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-n8n-vpc-public-us-east-1b",
              "Project": "k8s-n8n",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "k8s-n8n-vpc-public-us-east-1b",
              "Project": "k8s-n8n",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f95190acccd68cf5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397775295:subnet/subnet-0b5d973a8c3ada415",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.6.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5d973a8c3ada415",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397775295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-n8n-vpc-public-us-east-1c",
              "Project": "k8s-n8n",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "k8s-n8n-vpc-public-us-east-1c",
              "Project": "k8s-n8n",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f95190acccd68cf5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397775295:vpc/vpc-0f95190acccd68cf5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.6.0.0/16",
            "default_network_acl_id": "acl-0150bbf420928621c",
            "default_route_table_id": "rtb-0ce0a2132910102f9",
            "default_security_group_id": "sg-08ddfe6d36a532bf7",
            "dhcp_options_id": "dopt-033cb392c03b4ef05",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f95190acccd68cf5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ce0a2132910102f9",
            "owner_id": "767397775295",
            "tags": {
              "Name": "k8s-n8n-vpc",
              "Project": "k8s-n8n"
            },
            "tags_all": {
              "Name": "k8s-n8n-vpc",
              "Project": "k8s-n8n"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}